--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack --progress",
     "build:production": "NODE_ENV=production webpack --progress -p",
     "lint": "eslint src/",
+    "test": "jest",
     "lint:fix": "eslint --fix src/",
     "profile": "webpack --profile --json > webpack-stats.json",
     "upload": "s3-deploy ./public/** ./public/*/** ./public/img/*/** --cwd ./public/ --bucket gittrophy.com --cache 604800",
@@ -27,6 +28,7 @@
     "axios": "^0.16.2",
     "debounce": "^1.0.2",
     "downloadjs": "^1.4.7",
+    "jest": "^23.6.0",
     "react-container-dimensions": "^1.3.2",
     "react-ga": "^2.2.0",
     "react-images": "^0.5.5",
