--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
   },
   "homepage": "https://github.com/bcongdon/git-trophy#readme",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
     "axios": "^0.16.2",
+    "babel-jest": "^23.6.0",
     "debounce": "^1.0.2",
     "downloadjs": "^1.4.7",
-    "jest": "^23.6.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-15": "^1.3.0",
     "react-container-dimensions": "^1.3.2",
     "react-ga": "^2.2.0",
     "react-images": "^0.5.5",
@@ -46,7 +50,10 @@
     "xmlbuilder": "^9.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.23.0",
@@ -62,8 +69,11 @@
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
     "html-webpack-plugin": "^2.30.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "jest": "^23.6.0",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
+    "react-test-renderer": "^15.5.3",
+    "regenerator-runtime": "^0.13.1",
     "s3-deploy": "^0.7.5",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1"
