--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-test-renderer": "^15.5.3",
+    "redux-mock-store": "^1.5.3",
     "regenerator-runtime": "^0.13.1",
     "s3-deploy": "^0.7.5",
     "webpack": "^3.3.0",
