--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --progress",
     "build:production": "NODE_ENV=production webpack --progress -p",
     "lint": "eslint src/",
-    "test": "jest",
+    "test": "jest --coverage",
     "lint:fix": "eslint --fix src/",
     "profile": "webpack --profile --json > webpack-stats.json",
     "upload": "s3-deploy ./public/** ./public/*/** ./public/img/*/** --cwd ./public/ --bucket gittrophy.com --cache 604800",
