--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "downloadjs": "^1.4.7",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-15": "^1.3.0",
+    "react-color": "^2.17.0",
     "react-container-dimensions": "^1.3.2",
     "react-ga": "^2.2.0",
     "react-images": "^0.5.5",
